include/Win32/Physics.NGDImport.hpp

//-- forward type declarations -----------------------------------------------
struct TNewtonMaterialData;
struct TNewtonCollisionMaterial;
struct TNewtonBoxParam;
struct TNewtonSphereParam;
struct TNewtonCylinderParam;
struct TNewtonCapsuleParam;
struct TNewtonConeParam;
struct TNewtonTaperedCapsuleParam;
struct TNewtonTaperedCylinderParam;
struct TNewtonChamferCylinderParam;
struct TNewtonConvexHullParam;
struct TNewtonCompoundCollisionParam;
struct TNewtonCollisionTreeParam;
struct TNewtonDeformableMeshParam;
struct TNewtonHeightFieldCollisionParam;
struct TNewtonSceneCollisionParam;
struct DECLSPEC_DRECORD TNewtonCollisionNullParam
{
};
struct TNewtonCollisionInfoRecord;
struct NewtonJointRecord;
struct NewtonUserMeshCollisionCollideDesc;
struct NewtonWorldConvexCastReturnInfo;
//-- type declarations -------------------------------------------------------
typedef float dFloat;
typedef double dFloat64;
typedef __int64 dLong;
typedef float *PdFloat;
typedef double *PdFloat64;
typedef __int64 *PdLong;
typedef System::Extended Long_double;
typedef System::Int8 nchar;
typedef System::Byte unsigned_char;
typedef System::Word unsigned_short;
typedef unsigned unsigned_long;
typedef unsigned unsigned_int;
typedef unsigned size_t;
typedef System::StaticArray<System::WideChar, 256> charArray;
typedef System::Int8 *P__int8;
typedef short *P__int16;
typedef int *P__int32;
typedef __int64 *P__int64;
typedef System::Int8 *P2Char;
typedef System::Byte *PUnsigned_char;
typedef short *PShort;
typedef System::Word *PUnsigned_short;
typedef int *PLong;
typedef unsigned *PUnsigned_long;
typedef unsigned *PUnsigned_int;
typedef unsigned *Psize_t;
typedef System::Extended *PLong_double;
typedef charArray *PCharArray;
typedef bool Bool;
typedef void * Pvoid;
typedef bool *PBool;
typedef void * PNewtonMesh;
typedef void * PNewtonBody;
typedef void * PNewtonWorld;
typedef void * PNewtonJoint;
typedef void * PNewtonMaterial;
typedef void * PNewtonCollision;
typedef void * PNewtonDeformableMeshSegment;
typedef void * PNewtonFracturedCompoundMeshPart;
typedef void * PNewtonSerializeHandle;
typedef void * PNewtonMeshHandle;
typedef void * PNewtonMeshVertex;
typedef void * PNewtonMeshPoint;
typedef void * PNewtonMeshEdge;
typedef void * PNewtonMeshFace;
typedef void * PNewtonSceneProxy;
typedef void * PNewtonBreakableComponentMesh;
typedef void * PNewtonListener;
struct DECLSPEC_DRECORD TNewtonMaterialData
{
public:
	void *m_ptr;
	__int64 m_int;
	float m_float;
};
struct DECLSPEC_DRECORD TNewtonCollisionMaterial
{
public:
	__int64 m_userId;
	TNewtonMaterialData m_userData;
	System::StaticArray<TNewtonMaterialData, 6> m_userParam;
};
struct DECLSPEC_DRECORD TNewtonBoxParam
{
public:
	float m_x;
	float m_y;
	float m_z;
};
struct DECLSPEC_DRECORD TNewtonSphereParam
{
public:
	float m_radio;
};
struct DECLSPEC_DRECORD TNewtonCylinderParam
{
public:
	float m_radio;
	float m_height;
};
struct DECLSPEC_DRECORD TNewtonCapsuleParam
{
public:
	float m_radio;
	float m_height;
};
struct DECLSPEC_DRECORD TNewtonConeParam
{
public:
	float m_radio;
	float m_height;
};
struct DECLSPEC_DRECORD TNewtonTaperedCapsuleParam
{
public:
	float m_radio0;
	float m_radio1;
	float m_height;
};
struct DECLSPEC_DRECORD TNewtonTaperedCylinderParam
{
public:
	float m_radio0;
	float m_radio1;
	float m_height;
};
struct DECLSPEC_DRECORD TNewtonChamferCylinderParam
{
public:
	float m_radio;
	float m_height;
};
struct DECLSPEC_DRECORD TNewtonConvexHullParam
{
public:
	int m_vertexCount;
	int m_vertexStrideInBytes;
	int m_faceCount;
	float *m_vertex;
};
struct DECLSPEC_DRECORD TNewtonCompoundCollisionParam
{
public:
	int m_chidrenCount;
};
struct DECLSPEC_DRECORD TNewtonCollisionTreeParam
{
public:
	int m_vertexCount;
	int m_indexCount;
};
struct DECLSPEC_DRECORD TNewtonDeformableMeshParam
{
public:
	int m_vertexCount;
	int m_triangleCount;
	int m_vertexStrideInBytes;
	System::Word *m_indexList;
	float *m_vertexList;
};
struct DECLSPEC_DRECORD TNewtonHeightFieldCollisionParam
{
public:
	int m_width;
	int m_height;
	int m_gridsDiagonals;
	int m_elevationDataType;
	float m_verticalScale;
	float m_horizonalScale_x;
	float m_horizonalScale_z;
	void *m_vertialElevation;
	System::WideChar *m_atributes;
};
struct DECLSPEC_DRECORD TNewtonSceneCollisionParam
{
public:
	int m_childrenProxyCount;
};
typedef TNewtonCollisionInfoRecord *PNewtonCollisionInfoRecord;
struct DECLSPEC_DRECORD TNewtonCollisionInfoRecord
{
public:
	System::StaticArray<System::StaticArray<float, 4>, 4> m_offsetMatrix;
	TNewtonCollisionMaterial m_collisionMaterial;
	int m_collisionType;
	
public:
	union
	{
		struct 
		{
			TNewtonSceneCollisionParam sdSceneCollision;
		};
		struct 
		{
			TNewtonHeightFieldCollisionParam sdHeightfield;
		};
		struct 
		{
			TNewtonCollisionTreeParam sdTree;
		};
		struct 
		{
			TNewtonCompoundCollisionParam sdCompound;
		};
		struct 
		{
			
		};
		struct 
		{
			TNewtonConvexHullParam sdConvexhull;
		};
		struct 
		{
			TNewtonChamferCylinderParam sdChamfercylinder;
		};
		struct 
		{
			TNewtonCylinderParam sdCylinder;
		};
		struct 
		{
			TNewtonCapsuleParam sdCapsule;
		};
		struct 
		{
			TNewtonSphereParam sdSphere;
		};
		struct 
		{
			TNewtonConeParam shapedata;
		};
		struct 
		{
			TNewtonBoxParam sdbox;
		};
		
	};
};
typedef NewtonJointRecord *PNewtonJointRecord;
struct DECLSPEC_DRECORD NewtonJointRecord
{
public:
	System::StaticArray<System::StaticArray<float, 4>, 4> m_attachmenMatrix_0;
	System::StaticArray<System::StaticArray<float, 4>, 4> m_attachmenMatrix_1;
	System::StaticArray<float, 3> m_minLinearDof;
	System::StaticArray<float, 3> m_maxLinearDof;
	System::StaticArray<float, 3> m_minAngularDof;
	System::StaticArray<float, 3> m_maxAngularDof;
	void *m_attachBody_0;
	void *m_attachBody_1;
	System::StaticArray<float, 16> m_extraParameters;
	int m_bodiesCollisionOn;
	System::StaticArray<float, 32> m_descriptionType;
};
typedef NewtonUserMeshCollisionCollideDesc *PNewtonUserMeshCollisionCollideDesc;
struct DECLSPEC_DRECORD NewtonUserMeshCollisionCollideDesc
{
public:
	System::StaticArray<float, 4> m_boxP0;
	System::StaticArray<float, 4> m_boxP1;
	System::StaticArray<float, 4> m_boxDistanceTravel;
	int m_threadNumber;
	int m_faceCount;
	int m_vertexStrideInBytes;
	float m_skinThickness;
	void *m_userData;
	void *m_objBody;
	void *m_polySoupBody;
	void *m_objCollision;
	void *m_polySoupCollision;
	float *m_vertex;
	int *m_faceIndexCount;
	int *m_faceVertexIndex;
};
typedef NewtonWorldConvexCastReturnInfo *PNewtonWorldConvexCastReturnInfo;
struct DECLSPEC_DRECORD NewtonWorldConvexCastReturnInfo
{
public:
	System::StaticArray<float, 4> m_point;
	System::StaticArray<float, 4> m_normal;
	System::StaticArray<float, 4> m_normalOnHitPoint;
	int m_contactID;
	void *m_hitBody;
	float m_penetration;
};
//-- var, const, procedure ---------------------------------------------------
#define NewtonDLL L"newton32.dll"
using namespace Physics;