Source/Physics.NGDImport.pas

//
// The graphics rendering engine GLScene http://glscene.org
//
unit Physics.NGDImport;

(* Copyright (c) <2003-2014> <Julio Jerez, Newton Game Dynamics>
*
* This software is provided 'as-is', without any express or implied
* warranty. In no event will the authors be held liable for any damages
* arising from the use of this software.
*
* Permission is granted to anyone to use this software for any purpose,
* including commercial applications, and to alter it and redistribute it
* freely, subject to the following restrictions:
*
* 1. The origin of this software must not be misrepresented; you must not
* claim that you wrote the original software. If you use this software
* in a product, an acknowledgment in the product documentation would be
* appreciated but is not required.
*
* 2. Altered source versions must be plainly marked as such, and must not be
* misrepresented as being the original software.
*
* 3. This notice may not be removed or altered from any source distribution.
*)

{.$DEFINE NEWTON_DOUBLE_PRECISION} 

interface

uses
  System.Classes;

const
{.$DEFINE NEWTON_DOUBLE_PRECISION} // This is needed when you want to use double precision
{$IFDEF WIN32}
   NewtonDLL = 'newton32.dll';
{$ENDIF}

{$IFDEF WIN64}
   NewtonDLL = 'newton64.dll';
{$ENDIF}

type
{$IFDEF NEWTON_DOUBLE_PRECISION}
   dFloat               = Double;
{$ELSE}
   dFloat               = Single;
{$ENDIF}
   dFloat64             = Double;
   dLong                = Int64;

   PdFloat              = ^dFloat;
   PdFloat64            = ^dFloat64;
   PdLong               = ^dLong;
   Long_double          = Extended;

const
 NEWTON_MAJOR_VERSION                            =  3;
 NEWTON_MINOR_VERSION                            = 15;
 NEWTON_BROADPHASE_DEFAULT                       =  0;
 NEWTON_PROFILER_WORLD_UPDATE                    =  0;
 NEWTON_DYNAMIC_BODY                             =  0;
 NEWTON_PROFILER_COLLISION_UPDATE                =  1;
 NEWTON_PROFILER_COLLISION_UPDATE_BROAD_PHASE    =  2;
 NEWTON_PROFILER_COLLISION_UPDATE_NARROW_PHASE   =  3;
 NEWTON_PROFILER_DYNAMICS_UPDATE                 =  4;
 NEWTON_PROFILER_DYNAMICS_CONSTRAINT_GRAPH       =  5;
 NEWTON_PROFILER_FORCE_CALLBACK_UPDATE           =  6;
 NEWTON_PROFILER_DYNAMICS_SOLVE_CONSTRAINT_GRAPH =  7;

 SERIALIZE_ID_SPHERE = 0;
 SERIALIZE_ID_CAPSULE = 1;
 SERIALIZE_ID_CYLINDER = 2;
 SERIALIZE_ID_CHAMFERCYLINDER = 3;
 SERIALIZE_ID_BOX = 4;
 SERIALIZE_ID_CONE = 5;
 SERIALIZE_ID_CONVEXHULL = 6;
 SERIALIZE_ID_NULL = 7;
 SERIALIZE_ID_COMPOUND = 8;
 SERIALIZE_ID_TREE = 9;
 SERIALIZE_ID_HEIGHTFIELD = 10;
 SERIALIZE_ID_CLOTH_PATCH = 11;
 SERIALIZE_ID_DEFORMABLE_SOLID = 12;
 SERIALIZE_ID_USERMESH = 13;
 SERIALIZE_ID_SCENE = 14;
 SERIALIZE_ID_FRACTURED_COMPOUND = 15;
// SERIALIZE_ID_COMPOUND_BREAKABLE                 = 14;
type
// This C++ types for Delphi syntax to speed up the translation process and avoid bugs
  __int8 = ShortInt;
  __int16 = SmallInt;
  __int32 = LongInt;
  __int64 = Int64;
  nchar = ShortInt;
  unsigned_char = Byte;
  short = SmallInt;
  unsigned_short = Word;
  long = LongInt;
  unsigned_long = LongWord;
  unsigned_int = Cardinal;
  size_t = Cardinal;
  charArray = array [0..255] of Char;

  P__int8 = ^__int8;
  P__int16 = ^__int16;
  P__int32 = ^__int32;
  P__int64 = ^__int64;
  P2Char = ^nchar;
  PUnsigned_char = ^unsigned_char;
  PShort = ^short;
  PUnsigned_short = ^unsigned_short;
  PLong = ^long;
  PUnsigned_long = ^unsigned_long;
  PUnsigned_int = ^unsigned_int;
  Psize_t = ^size_t;
  PLong_double = ^long_double;
  PCharArray = ^charArray;

  //Pascal to C++
  Bool = Boolean;

 //Pointer types
  Pvoid = Pointer; //void pointer
  PBool = ^Bool;

  //Moved Maths related C++ Definitions to Maths3D.pas

  (* Next done in order to make code complete and code parameters hint window
  to show the actual type for ex. PNewtonWorld instead of just "Pointer",
  thus making programming a lot easier *)

(*
#ifdef __cplusplus
	class NewtonMesh;
	class NewtonBody;
	class NewtonWorld;
	class NewtonJoint;
	class NewtonMaterial;
	class NewtonCollision;
	class NewtonDeformableMeshSegment;
	class NewtonFracturedCompoundMeshPart;
#else
*)

  PNewtonMesh = Pointer;
  PNewtonBody = Pointer;
  PNewtonWorld = Pointer;
  PNewtonJoint = Pointer;
  PNewtonMaterial = Pointer;
  PNewtonCollision = Pointer;
  PNewtonDeformableMeshSegment  = Pointer;
  PNewtonFracturedCompoundMeshPart = Pointer;
//  PNewtonContact = Pointer;
  PNewtonSerializeHandle = Pointer;
  PNewtonMeshHandle = Pointer;
  PNewtonMeshVertex = Pointer;
  PNewtonMeshPoint = Pointer;
  PNewtonMeshEdge = Pointer;
  PNewtonMeshFace = Pointer;

  PNewtonSceneProxy = Pointer;
  PNewtonBreakableComponentMesh = Pointer;

  PNewtonListener = Pointer;

  //PNewtonRagDoll = Pointer;
  //PNewtonRagDollBone = Pointer;
  // NewtonCollisionInfoRecord


 TNewtonMaterialData = packed record // union

	m_ptr   : Pointer;
	m_int   : dLong;
	m_float : dFloat;
 end;

TNewtonCollisionMaterial = packed record
  m_userId: dLong;
  m_userData: TNewtonMaterialData;
  m_userParam: array[0..5] of TNewtonMaterialData;
 end;


 TNewtonBoxParam = packed record
  m_x : dFloat;
  m_y : dFloat;
  m_z : dFloat;
 end;

 TNewtonSphereParam = packed record
  m_radio                : dFloat;
 end;

 TNewtonCylinderParam = packed record
  m_radio, m_height               : dFloat;
 end;

 TNewtonCapsuleParam = packed record
  m_radio, m_height               : dFloat;
 end;

 TNewtonConeParam = packed record
  m_radio,
  m_height               : dFloat;
 end;

 TNewtonTaperedCapsuleParam = packed record
  m_radio0,
  m_radio1,
  m_height               : dFloat;
 end;


 TNewtonTaperedCylinderParam = packed record
  m_radio0,
  m_radio1,
  m_height               : dFloat;
 end;

 TNewtonChamferCylinderParam = packed record
  m_radio  : dFloat;
  m_height : dFloat;
 end;

 TNewtonConvexHullParam = packed record
  m_vertexCount           : integer;
  m_vertexStrideInBytes   : integer;
  m_faceCount             : integer;
  m_vertex                : PdFloat;
 end;


  TNewtonCompoundCollisionParam = packed record
    m_chidrenCount: integer;

  end;

  TNewtonCollisionTreeParam = packed record
    m_vertexCount: integer;
    m_indexCount: integer;
  end;

 TNewtonDeformableMeshParam = packed record
  m_vertexCount           : integer;
  m_triangleCount         : integer;
  m_vertexStrideInBytes   : integer;
  m_indexList             : PWord;
  m_vertexList            : PdFloat;
 end;


  TNewtonHeightFieldCollisionParam = packed record
    m_width: integer;
    m_height: integer;
    m_gridsDiagonals: integer;
    m_elevationDataType: integer; // 0 = 32 bit floats, 1 = unsigned 16 bit integers
    m_verticalScale: dFloat;
    m_horizonalScale_x: dFloat;
    m_horizonalScale_z: dFloat;
    m_vertialElevation: Pointer;
    m_atributes: pchar;
  end;

  TNewtonSceneCollisionParam = packed record
    m_childrenProxyCount: integer;
  end;

  TNewtonCollisionNullParam = packed record
    // nothing.
  end;

  PNewtonCollisionInfoRecord = ^TNewtonCollisionInfoRecord;
  TNewtonCollisionInfoRecord = packed record
    m_offsetMatrix: array[0..3,0..3] of dFloat;
	m_collisionMaterial: TNewtonCollisionMaterial;
    m_collisionType: integer;          // tag id to identify the collision primitive
    case Integer of
      SERIALIZE_ID_BOX: (sdbox: TNewtonBoxParam);
      SERIALIZE_ID_CONE: (shapedata: TNewtonConeParam);
      SERIALIZE_ID_SPHERE: (sdSphere: TNewtonSphereParam);
      SERIALIZE_ID_CAPSULE: (sdCapsule: TNewtonCapsuleParam);
      SERIALIZE_ID_CYLINDER: (sdCylinder: TNewtonCylinderParam);
      SERIALIZE_ID_CHAMFERCYLINDER: (sdChamfercylinder: TNewtonChamferCylinderParam);
      SERIALIZE_ID_CONVEXHULL: (sdConvexhull: TNewtonConvexHullParam);
      SERIALIZE_ID_NULL: (sdNull: TNewtonCollisionNullParam);
      SERIALIZE_ID_COMPOUND: (sdCompound: TNewtonCompoundCollisionParam);
      SERIALIZE_ID_TREE: (sdTree: TNewtonCollisionTreeParam);
      SERIALIZE_ID_HEIGHTFIELD: (sdHeightfield: TNewtonHeightFieldCollisionParam);
      SERIALIZE_ID_SCENE: (sdSceneCollision: TNewtonSceneCollisionParam);

  end;


  PNewtonJointRecord = ^NewtonJointRecord;
  NewtonJointRecord = packed record
    m_attachmenMatrix_0 : array[ 0..3,0..3 ] of dFloat;
    m_attachmenMatrix_1 : array[ 0..3,0..3 ] of dFloat;
    m_minLinearDof      : array[ 0..2 ] of dFloat;
    m_maxLinearDof      : array[ 0..2 ] of dFloat;
    m_minAngularDof     : array[ 0..2 ] of dFloat;
    m_maxAngularDof     : array[ 0..2 ] of dFloat;
    m_attachBody_0      : PNewtonBody;
    m_attachBody_1      : PNewtonBody;
    m_extraParameters   : array[ 0..15 ] of dFloat;
    m_bodiesCollisionOn : integer;
    m_descriptionType   : array[ 0..31 ] of dFloat;
  end;


  PNewtonUserMeshCollisionCollideDesc = ^NewtonUserMeshCollisionCollideDesc;
  NewtonUserMeshCollisionCollideDesc = record
    m_boxP0               : array[ 0..3 ] of dFloat; // lower bounding box of intersection query in local space
    m_boxP1               : array[ 0..3 ] of dFloat; // upper bounding box of intersection query in local space
    m_boxDistanceTravel	  : array[ 0..3 ] of dFloat; // max distance that box bpxP0 and boxP1 can travel on this timestep, used this for continue collision mode.
    m_threadNumber        : integer;                     // current thread executing this query
    m_faceCount           : integer;                     // the application should set here how many polygons intersect the query box
    m_vertexStrideInBytes : integer;                     // the application should set here the size of each vertex
  	m_skinThickness       : dFloat;                  // this is the minimum skin separation specified by the material between these two colliding shapes
    m_userData            : Pointer;                 // user data passed to the collision geometry at creation time

    m_objBody             : PNewtonBody;             // pointer to the colliding body
    m_polySoupBody        : PNewtonBody;             // pointer to the rigid body owner of this collision tree
	m_objCollision 	      : PNewtonCollision;	     // collision shape of the colliding body, (no necessarily the collision of m_objBody)
	m_polySoupCollision   : PNewtonCollision;  	     // collision shape of the collision tree, (no necessarily the collision of m_polySoupBody)

    m_vertex              : ^dFloat;                 // the application should set here the pointer to the global vertex of the mesh.
    m_faceIndexCount      : ^integer;                    // the application should set here the pointer to the vertex count of each face.
    m_faceVertexIndex     : ^integer;                    // the application should set here the pointer index array for each vertex on a face.
												  // the format of a face is I0, I1, I2, I3, ..., M, N, E0, E1, E2, ..., A
                          // I0, I1, I2, .. are the indices to the vertex, relative to m_vertex pointer
                         	// M is the index to the material sub shape id
													// N in the index to the vertex normal relative to m_vertex pointer
													// E0, E1, E2, ... are the indices of the the face normal that is shared to that face edge, when the edge does not share a face normal then the edge index is set to index N, which the index to the face normal
													// A is and estimate of the largest diagonal of the face, this used internally as a hint to improve floating point accuracy and algorithm performance.
  end;

  PNewtonWorldConvexCastReturnInfo = ^NewtonWorldConvexCastReturnInfo;
  NewtonWorldConvexCastReturnInfo = record
    m_point            : array[ 0..3 ] of dFloat; // collision point in global space
    m_normal           : array[ 0..3 ] of dFloat; // surface normal at collision point in global space
    m_normalOnHitPoint : array[ 0..3 ] of dFloat; // surface normal at the surface of the hit body,
					         // is the same as the normal calculated by a ray cast hitting the body at the hit poi
